--- a/AirdPro/Forms/AirdForm.resx
+++ b/AirdPro/Forms/AirdForm.resx
@@ -270,6 +270,30 @@
   <data name="headerOutput.Width" type="System.Int32, mscorlib">
     <value>250</value>
   </data>
+  <metadata name="contentMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>574, 16</value>
+  </metadata>
+  <data name="rerun.Size" type="System.Drawing.Size, System.Drawing">
+    <value>210, 24</value>
+  </data>
+  <data name="rerun.Text" xml:space="preserve">
+    <value>Rerun</value>
+  </data>
+  <data name="removeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>210, 24</value>
+  </data>
+  <data name="removeToolStripMenuItem.Text" xml:space="preserve">
+    <value>Remove</value>
+  </data>
+  <data name="contentMenu.Size" type="System.Drawing.Size, System.Drawing">
+    <value>211, 80</value>
+  </data>
+  <data name="&gt;&gt;contentMenu.Name" xml:space="preserve">
+    <value>contentMenu</value>
+  </data>
+  <data name="&gt;&gt;contentMenu.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="lvFileList.Font" type="System.Drawing.Font, System.Drawing">
     <value>微软雅黑, 9pt</value>
   </data>
@@ -367,31 +391,31 @@
     <value>微软雅黑, 9pt</value>
   </data>
   <data name="selectFilesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 22</value>
+    <value>142, 26</value>
   </data>
   <data name="selectFilesToolStripMenuItem.Text" xml:space="preserve">
     <value>Import</value>
   </data>
   <data name="filesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>45, 21</value>
+    <value>55, 24</value>
   </data>
   <data name="filesToolStripMenuItem.Text" xml:space="preserve">
     <value>Files</value>
   </data>
   <data name="configList.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>174, 26</value>
   </data>
   <data name="configList.Text" xml:space="preserve">
     <value>Conversion</value>
   </data>
   <data name="globalSettingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>174, 26</value>
   </data>
   <data name="globalSettingsToolStripMenuItem.Text" xml:space="preserve">
     <value>Options</value>
   </data>
   <data name="menuConfiguration.Size" type="System.Drawing.Size, System.Drawing">
-    <value>66, 21</value>
+    <value>83, 24</value>
   </data>
   <data name="menuConfiguration.Text" xml:space="preserve">
     <value>Settings</value>
@@ -400,7 +424,7 @@
     <value>0, 0</value>
   </data>
   <data name="menuConfig.Size" type="System.Drawing.Size, System.Drawing">
-    <value>915, 25</value>
+    <value>915, 28</value>
   </data>
   <data name="menuConfig.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -445,7 +469,7 @@
     <value>534, 62</value>
   </data>
   <data name="lblDp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>24, 17</value>
+    <value>29, 20</value>
   </data>
   <data name="lblDp.TabIndex" type="System.Int32, mscorlib">
     <value>38</value>
@@ -475,7 +499,7 @@
     <value>12, 171</value>
   </data>
   <data name="cbStack.Size" type="System.Drawing.Size, System.Drawing">
-    <value>58, 21</value>
+    <value>70, 24</value>
   </data>
   <data name="cbStack.TabIndex" type="System.Int32, mscorlib">
     <value>37</value>
@@ -508,7 +532,7 @@
     <value>10, 136</value>
   </data>
   <data name="lblIntCompA.Size" type="System.Drawing.Size, System.Drawing">
-    <value>158, 17</value>
+    <value>199, 20</value>
   </data>
   <data name="lblIntCompA.TabIndex" type="System.Int32, mscorlib">
     <value>36</value>
@@ -532,7 +556,7 @@
     <value>174, 133</value>
   </data>
   <data name="intByteComp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>82, 25</value>
+    <value>82, 28</value>
   </data>
   <data name="intByteComp.TabIndex" type="System.Int32, mscorlib">
     <value>35</value>
@@ -568,7 +592,7 @@
     <value>247, 101</value>
   </data>
   <data name="lblMzByteComp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>133, 17</value>
+    <value>164, 20</value>
   </data>
   <data name="lblMzByteComp.TabIndex" type="System.Int32, mscorlib">
     <value>32</value>
@@ -592,7 +616,7 @@
     <value>386, 98</value>
   </data>
   <data name="mzByteComp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>77, 25</value>
+    <value>77, 28</value>
   </data>
   <data name="mzByteComp.TabIndex" type="System.Int32, mscorlib">
     <value>31</value>
@@ -625,7 +649,7 @@
     <value>104, 171</value>
   </data>
   <data name="lblStackLayers.Size" type="System.Drawing.Size, System.Drawing">
-    <value>45, 17</value>
+    <value>55, 20</value>
   </data>
   <data name="lblStackLayers.TabIndex" type="System.Int32, mscorlib">
     <value>30</value>
@@ -667,7 +691,7 @@
     <value>158, 167</value>
   </data>
   <data name="cbStackLayers.Size" type="System.Drawing.Size, System.Drawing">
-    <value>84, 25</value>
+    <value>84, 28</value>
   </data>
   <data name="cbStackLayers.TabIndex" type="System.Int32, mscorlib">
     <value>29</value>
@@ -697,7 +721,7 @@
     <value>9, 101</value>
   </data>
   <data name="lblMzIntComp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>122, 17</value>
+    <value>150, 20</value>
   </data>
   <data name="lblMzIntComp.TabIndex" type="System.Int32, mscorlib">
     <value>28</value>
@@ -721,7 +745,7 @@
     <value>137, 98</value>
   </data>
   <data name="mzIntComp.Size" type="System.Drawing.Size, System.Drawing">
-    <value>82, 25</value>
+    <value>82, 28</value>
   </data>
   <data name="mzIntComp.TabIndex" type="System.Int32, mscorlib">
     <value>27</value>
@@ -757,7 +781,7 @@
     <value>292, 205</value>
   </data>
   <data name="lblOperator.Size" type="System.Drawing.Size, System.Drawing">
-    <value>62, 17</value>
+    <value>76, 20</value>
   </data>
   <data name="lblOperator.TabIndex" type="System.Int32, mscorlib">
     <value>21</value>
@@ -784,7 +808,7 @@
     <value>360, 202</value>
   </data>
   <data name="tbOperator.Size" type="System.Drawing.Size, System.Drawing">
-    <value>104, 23</value>
+    <value>104, 27</value>
   </data>
   <data name="tbOperator.TabIndex" type="System.Int32, mscorlib">
     <value>20</value>
@@ -811,7 +835,7 @@
     <value>439, 61</value>
   </data>
   <data name="lblMzPrecision.Size" type="System.Drawing.Size, System.Drawing">
-    <value>30, 17</value>
+    <value>36, 20</value>
   </data>
   <data name="lblMzPrecision.TabIndex" type="System.Int32, mscorlib">
     <value>19</value>
@@ -844,7 +868,7 @@
     <value>475, 58</value>
   </data>
   <data name="cbMzPrecision.Size" type="System.Drawing.Size, System.Drawing">
-    <value>55, 25</value>
+    <value>55, 28</value>
   </data>
   <data name="cbMzPrecision.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -874,7 +898,7 @@
     <value>240, 62</value>
   </data>
   <data name="cbThreadAccelerate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>112, 21</value>
+    <value>140, 24</value>
   </data>
   <data name="cbThreadAccelerate.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -910,7 +934,7 @@
     <value>8, 205</value>
   </data>
   <data name="lblFileNameTag.Size" type="System.Drawing.Size, System.Drawing">
-    <value>62, 17</value>
+    <value>78, 20</value>
   </data>
   <data name="lblFileNameTag.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -937,7 +961,7 @@
     <value>88, 202</value>
   </data>
   <data name="tbFileNameSuffix.Size" type="System.Drawing.Size, System.Drawing">
-    <value>185, 23</value>
+    <value>185, 27</value>
   </data>
   <data name="tbFileNameSuffix.TabIndex" type="System.Int32, mscorlib">
     <value>13</value>
@@ -964,7 +988,7 @@
     <value>11, 62</value>
   </data>
   <data name="cbIsZeroIntensityIgnore.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 21</value>
+    <value>183, 24</value>
   </data>
   <data name="cbIsZeroIntensityIgnore.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
@@ -997,7 +1021,7 @@
     <value>7, 314</value>
   </data>
   <data name="lblConsole.Size" type="System.Drawing.Size, System.Drawing">
-    <value>55, 17</value>
+    <value>68, 20</value>
   </data>
   <data name="lblConsole.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -1063,7 +1087,7 @@
     <value>5, 9</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 16</value>
+    <value>95, 20</value>
   </data>
   <data name="label1.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -1126,7 +1150,7 @@
     <value>6, 29</value>
   </data>
   <data name="tbFolderPath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>493, 23</value>
+    <value>493, 27</value>
   </data>
   <data name="tbFolderPath.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -1177,7 +1201,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;container.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>1</value>
   </data>
   <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -2415,6 +2439,18 @@
   </data>
   <data name="&gt;&gt;ttAlgorithm.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolTip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;rerun.Name" xml:space="preserve">
+    <value>rerun</value>
+  </data>
+  <data name="&gt;&gt;rerun.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;removeToolStripMenuItem.Name" xml:space="preserve">
+    <value>removeToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;removeToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>AirdForm</value>
